@@ -1,3 +1,9 @@
+2014-05-11  Patrice Dumas  <pertusus@free.fr>
+
+	* tp/t/test_utils.pl(test): use SKIP and not TODO, as TODO is
+	assumed to fail, while there is an unknown output since different
+	perl verions treat NEL differently.
+
 2014-05-10  Gavin Smith  <gavinsmith0123@gmail.com>
 
 	* info/info-utils.c (info_parse_node): Call read_quoted_string
